--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+Back/.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -146,3 +146,4 @@ dist
 # IDE
 /.idea
 package-lock.json
+/Back/.env
