touchups and read tour guide

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#Intellij Files
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
