--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "latest",
     "daisyui": "^4.12.10",
     "tailwindcss": "^3.4.13"
   }
