--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "prop-types": "^15.8.1",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.2",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
