--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "md5": "^2.3.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
