--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-select": "^5.8.2",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
