--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "prop-types": "^15.8.1",
